added displaying of images

--- a/Homework_1/HW1.ipynb
+++ b/Homework_1/HW1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "id": "cfb0a0a7",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "id": "cc2da1c3",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "Text(0.5, 1.0, 'Gray')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "id": "86cf434e",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "a858ad5d",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 66,
    "id": "d60e76f0",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "id": "7a949f99",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "id": "16aae30e",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "id": "daed86a4",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "id": "ce68b9df",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "id": "bc5b3c73",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "id": "176267d3",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "id": "db714827",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 74,
    "id": "ee5ec227",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "id": "e4940f6b",
    "metadata": {
     "scrolled": false
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 76,
    "id": "0eb04e4a",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 77,
    "id": "e5ba7e09",
    "metadata": {
     "scrolled": false
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 78,
    "id": "d82ab9db",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "id": "99523268",
    "metadata": {},
    "outputs": [
@@ -423,6 +423,34 @@
    ],
    "source": [
     "display_hist_eq(high_lambda)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9acc18ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_normal_equalized(image): \n",
+    "    \n",
+    "    fig = plt.figure(figsize=(10,20))\n",
+    "    row = 1\n",
+    "    col = 2\n",
+    "    \n",
+    "    equalized = cv2.equalize(image.astype(np.uint8))\n",
+    "    \n",
+    "    fig.add_subplot(row, col, 1)\n",
+    "    plt.imshow(image, )\n",
+    "    plt.title('Original Image')\n",
+    "    \n",
+    "    fig.add_subplot(row, col, 2)\n",
+    "    plt.imshow()\n",
+    "    plt.title('Equalized Image')\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    plt.show()"
    ]
   }
  ],
